--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    background: #000;
 }
 
 header {
@@ -39,9 +40,27 @@ thing {
     color: white;
     font-family: 'Courier New';
     display:none;
-    padding: 80px;
+    padding: 30px;
     font-size: 32px;
+}
+.anim4 {
+    color: white;
+    font-family: 'Courier New';
+    display:none;
+    padding: 30px;
+    font-size: 32px;
+}
+.anim5 {
+    color: white;
+    font-family: 'Courier New';
+    display:none;
+    padding: 30px;
+    font-size: 32px;
+}
 
+.69420{
+    display: block;
+    text-align: left;
 
 }
 
