--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,25 @@ body {
 
   font-family:'Dev Gothic Regular';
   image-rendering: pixelated;
+
+  background-image: url("../bg.png");
+  background-repeat: repeat;
+  background-attachment: scroll;
+  background-size: 50px 50px;
+  animation: slide 1s infinite linear;
 }
+
+@keyframes slide{
+    0%{
+        background-position-x: 0px;
+        background-position-y: 0px;
+    }
+    100%{
+        background-position-x: -100px; /* or something */
+        background-position-y: -100px;
+    }
+}
+
 @font-face {
     font-family: 'Dev Gothic Regular';
     font-style: normal;
@@ -25,38 +43,9 @@ h1{
 }
 
 
-.sliding-background {
-    position: relative;
-    background-image: url("../bg.png");
-    background-repeat: repeat;
-    background-attachment: scroll;
-    background-size: 50px 50px;
-    animation: slide 1s infinite linear;
-
-}
-
-@keyframes slide{
-    0%{
-        background-position-x: 0px;
-        background-position-y: 0px;
-    }
-    100%{
-        background-position-x: -100px; /* or something */
-        background-position-y: -100px;
-    }
-}
 
 html {
     color: white;
-}
-
-@keyframes hover{
-    0%{
-    bottom: 0px;
-    }
-    100%{
-    bottom: 5px;
-    }
 }
 
 a:link {
@@ -68,6 +57,15 @@ a:link {
 
 a:hover{
     animation: hover 0.5s forwards;
+}
+
+@keyframes hover{
+    0%{
+    bottom: 0px;
+    }
+    100%{
+    bottom: 5px;
+    }
 }
 
 a:visited {
@@ -84,5 +82,5 @@ div {
 }
 
 img {
-    padding-top: 100%;
+    padding-top: 100px;
 }
