--- a/css/style.css
+++ b/css/style.css
@@ -67,13 +67,10 @@ html {
     color: white;
 }
 
-@keyframes hover{
-    0%{
+
+a {
+    transition: 0.3s;
     bottom: 0px;
-    }
-    100%{
-    bottom: 5px;
-    }
 }
 
 a:link {
@@ -84,18 +81,9 @@ a:link {
 }
 
 a:hover{
-    animation: hover 0.5s forwards;
+    bottom: 3px;
 }
 
-
-@keyframes hover{
-    0%{
-    bottom: 0px;
-    }
-    100%{
-    bottom: 5px;
-    }
-}
 
 
 a:visited {
