--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,16 @@ body {
   margin:100px;
   font-size: 25px;
   background-color:#161616;
-
-  font-family:'Dev Gothic Regular';
+  font-family:'Cranberry Gin';
   image-rendering: pixelated;
 
 }
 @font-face {
-    font-family: 'Dev Gothic Regular';
+    font-family: 'Cranberry Gin';
     font-style: normal;
     font-weight: normal;
-    src: local('Dev Gothic Regular'), url('../font/devgothic.woff') format('woff');
+
+    src: local('Cranberry Gin'), url('../font/Cranberry Gin.otf') format('woff');
 }
 
 .right{
