--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,18 @@
+@import url("../font/webfont.css");
+
 body {
-  margin:100px;
+  margin: 100px;
   font-size: 25px;
-  background-color:#161616;
-  font-family:'Cranberry Gin';
+  background-color: #161616;
+  font-family: 'NDS12', 'PixelMplus12-Regular', sans-serif;
   image-rendering: pixelated;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  -webkit-font-smoothing: none;
+  -moz-osx-font-smoothing: grayscale;
+  font-smooth: never;
 }
-
-
 
 .right {
   display: flex;
@@ -35,10 +38,10 @@ body {
 }
 
 @font-face {
-  font-family: 'Cranberry Gin';
+  font-family: 'PixelMplus12-Regular';
   font-style: normal;
   font-weight: normal;
-  src: local('Cranberry Gin'), url('../font/Cranberry Gin.otf') format('woff');
+  src: url('../font/PixelMplus12-Regular.ttf') format('truetype');
 }
 
 .sliding-background {
@@ -50,13 +53,13 @@ body {
   animation: slide 1s infinite linear;
 }
 
-@keyframes slide{
-  0%{
+@keyframes slide {
+  0% {
     background-position-x: 0px;
     background-position-y: 0px;
   }
-  100%{
-    background-position-x: -100px; /* or something */
+  100% {
+    background-position-x: -100px;
     background-position-y: -100px;
   }
 }
@@ -81,7 +84,7 @@ a:link {
   animation-fill-mode: forwards;
 }
 
-a:hover{
+a:hover {
   bottom: 6px;
 }
 
@@ -92,6 +95,10 @@ a:visited {
 
 .text {
   font-size: 25px;
+}
+
+p {
+  margin: 5px;
 }
 
 img {
