--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 @import url("../font/webfont.css");
 
 body {
-  margin: 100px;
   font-size: 25px;
   background-color: #161616;
   font-family: 'NDS12', 'PixelMplus12-Regular', sans-serif;
@@ -51,6 +50,7 @@ body {
   background-attachment: scroll;
   background-size: 50px 50px;
   animation: slide 1s infinite linear;
+
 }
 
 @keyframes slide {
@@ -103,4 +103,24 @@ p {
 
 img {
   padding-top: 100px;
+}
+
+#content {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Ensure the content div takes up at least the full viewport height */
+  margin: 100px;
+  box-sizing: border-box; /* Include padding and border in element's total width and height */
+}
+.fixed-bottom {
+  margin-top: auto; /* Push the text to the bottom of the content div */
+  font-weight: bold;
+  letter-spacing: 5px;
+  text-align: center; /* Optional, for centering the text */
+}
+
+.fullscreen-iframe {
+  width: 100%;
+  height: 100vh;
+  border: none;
 }
